--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.10",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
